sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:20: error: Unmatched closing brace '}' ignored here
}
^